--- a/app/views/antigen/v1/global-registration/nhs-number.html
+++ b/app/views/antigen/v1/global-registration/nhs-number.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/nhs-number-known">Back</a>
+  <a class="govuk-back-link" href="/accessibility/{{version}}/global-registration/nhs-number-known">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -24,17 +24,16 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/antigen/{{version}}/global-registration/check-your-answers" method="post">
+      <form action="/accessibility/{{version}}/global-registration/check-your-answers" method="post">
 
         <fieldset class="govuk-fieldset" aria-describedby="nhs-number-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-              What's {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s NHS number?
+              {{ pageTitle }}
             </h1>
           </legend>
           <span id="nhs-number-hint" class="govuk-body">
-            An NHS number is 10 digits, for example 867 406 5600.<br><br>
-            Enter this number with no spaces.
+            An NHS number is 10 digits, for example 867 406 5600.
           </span>
           <div class="govuk-form-group govuk-!-margin-top-5">
             <label class="govuk-label" for="nhs-number">
