--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1094,26 +1094,14 @@ a.card__body {
   }
 }
 
-// Accessibility
+//Accessibility
 
 .accessibility-needs-label {
   width: 100%;
 }
 
-.govuk-accordion,
-.js-enabled .govuk-accordion {
-  border-bottom: none;
-}
-
 @media (min-width: 48.0625em) {
   .accessibility-needs-label {
-    height: 45%; width: 70%;
-  }
-  .availability-tag {
-    text-align: right;
-  }
-  .govuk-accordion,
-  .js-enabled .govuk-accordion {
-    border-bottom: 1px solid #b1b4b6;
+    width: auto;
   }
 }
