--- a/app/views/accessibility/v1/global-registration/check-your-answers-person-1.html
+++ b/app/views/accessibility/v1/global-registration/check-your-answers-person-1.html
@@ -362,7 +362,7 @@
         {% endif %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Additional support
+            Accessibility support
           </dt>
           <dd class="govuk-summary-list__value">
             {% if data['access-needs-person-1-12'] %}
@@ -370,6 +370,9 @@
             {% else %}
               {% if data['access-needs-1-person-1'] %}
               {{ data['access-needs-1-person-1'] }}<br>
+              {% endif %}
+              {% if data['access-needs-13-person-1'] %}
+              {{ data['access-needs-13-person-1'] }}<br>
               {% endif %}
               {% if data['access-needs-2-person-1'] %}
               {{ data['access-needs-2-person-1'] }}<br>
