--- a/app/views/accessibility/v1/global-registration/check-your-answers.html
+++ b/app/views/accessibility/v1/global-registration/check-your-answers.html
@@ -464,7 +464,7 @@
           {% endif %}
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Additional support
+              Accessibility support
             </dt>
             <dd class="govuk-summary-list__value">
               {% if data['access-needs-12'] %}
@@ -472,6 +472,9 @@
               {% else %}
                 {% if data['access-needs-1'] %}
                 {{ data['access-needs-1'] }}<br>
+                {% endif %}
+                {% if data['access-needs-13'] %}
+                {{ data['access-needs-13'] }}<br>
                 {% endif %}
                 {% if data['access-needs-2'] %}
                 {{ data['access-needs-2'] }}<br>
