--- a/app/views/accessibility/v1/global-registration/people-confirmed.html
+++ b/app/views/accessibility/v1/global-registration/people-confirmed.html
@@ -98,9 +98,10 @@
 
       </form>
 
-      {% if data['way-to-test'] == "drive-through" or data['way-to-test'] == "walk-through" %}
+      <!-- routing done with nunjucks here because of an issue with Safari -->
+      {% if data['way-to-test'] == "home testing" %}
 
-      <form class="form" action="/accessibility/{{version}}/site-appointment-booking/find-test-site" method="post" style="display: inline-block;">
+      <form class="form" action="/accessibility/{{version}}/order-home-test-kit/" method="post" style="display: inline-block;">
 
         <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
@@ -108,7 +109,7 @@
 
       {% else %}
 
-      <form class="form" action="/accessibility/{{version}}/order-home-test-kit/" method="post" style="display: inline-block;">
+      <form class="form" action="/accessibility/{{version}}/site-appointment-booking/find-test-site" method="post" style="display: inline-block;">
 
         <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
