--- a/app/views/accessibility/v1/site-appointment-booking/choose-drive-through-site-distance.html
+++ b/app/views/accessibility/v1/site-appointment-booking/choose-drive-through-site-distance.html
@@ -55,9 +55,88 @@
             <strong>Sort by:</strong>
           </span>
 
-          <span id="choose-site-12-hint" class="govuk-body govuk-!-padding-right-3" style="border-right: 1px solid black;">Access needs</span><span id="choose-site-12-hint" class="govuk-body govuk-!-padding-left-3"><a class="govuk-link" href="/accessibility/{{version}}/site-appointment-booking/choose-drive-through-site-distance">Distance</a></span>
+          <span id="choose-site-12-hint" class="govuk-body govuk-!-padding-right-3" style="border-right: 1px solid black;"><a class="govuk-link" href="/accessibility/{{version}}/site-appointment-booking/choose-drive-through-site">Access needs</a></span><span id="choose-site-12-hint" class="govuk-body govuk-!-padding-left-3">Distance</span>
 
           <div class="govuk-radios govuk-!-margin-top-7">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="test-site-1" name="test-site" type="radio" value="Lee Valley Athletics Park" {{ checked("test-site", "Lee Valley Athletics Park") }} aria-describedby="choose-site-9-hint">
+              <label class="govuk-label govuk-radios__label" for="test-site-1">
+                <span  class="govuk-body-m">
+                  <strong>
+                    Lee Valley Athletics Park (drive in only no bikes)
+                  </strong>
+                </span>
+              </label>
+              <p class="govuk-!-margin-left-3 govuk-!-margin-top-2 govuk-!-margin-bottom-0"><span id="choose-site-9-hint" class="govuk-body-m">
+                Lee Valley Athletics Centre<br>
+                London<br>
+                N9 0AR<br>
+                <strong>3.5 miles</strong> by road<br><br>
+                508 appointments available.
+                </span>
+              </p>
+              <div style="margin-left: -30px;" class="govuk-accordion" data-module="govuk-accordion" id="accordion-13">
+                <div class="govuk-accordion__section ">
+                  <div class="govuk-accordion__section-header">
+                    <h2 class="govuk-accordion__section-heading">
+                      <span class="govuk-accordion__section-button" id="accordion-default-heading-13">
+                        What are the accessibility features at this site?
+                      </span>
+                    </h2>
+                  </div>
+                  <div id="accordion-default-content-13" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-13" style="padding-bottom: 0;">
+                    <table class="govuk-table" style="border-color: #b1b4b6">
+                      <tbody class="govuk-table__body">
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Step free and wheelchair accessible</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Large bays for wheelchairs and families</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Public toilets</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Accessible toilets</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Assisted testing - Drive through only<br>This is when staff can do the swab for you</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Guided testing<br>This is where staff guide you</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Easy read instructions</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Large print instructions</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">British Sign Language</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Language Translation</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                          <td class="govuk-table__cell">Braille</td>
+                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="govuk-radios__item govuk-!-margin-top-6">
               <input class="govuk-radios__input" id="test-site-3" name="test-site" type="radio" value="Greenwich" {{ checked("test-site", "Greenwich") }} aria-describedby="choose-site-10-hint">
               <label class="govuk-label govuk-radios__label" for="test-site-3">
@@ -209,85 +288,6 @@
                         <tr class="govuk-table__row">
                           <td class="govuk-table__cell">Braille</td>
                           <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="test-site-1" name="test-site" type="radio" value="Lee Valley Athletics Park" {{ checked("test-site", "Lee Valley Athletics Park") }} aria-describedby="choose-site-9-hint">
-              <label class="govuk-label govuk-radios__label" for="test-site-1">
-                <span  class="govuk-body-m">
-                  <strong>
-                    Lee Valley Athletics Park (drive in only no bikes)
-                  </strong>
-                </span>
-              </label>
-              <p class="govuk-!-margin-left-3 govuk-!-margin-top-2 govuk-!-margin-bottom-0"><span id="choose-site-9-hint" class="govuk-body-m">
-                Lee Valley Athletics Centre<br>
-                London<br>
-                N9 0AR<br>
-                <strong>3.5 miles</strong> by road<br><br>
-                508 appointments available.
-                </span>
-              </p>
-              <div style="margin-left: -30px;" class="govuk-accordion" data-module="govuk-accordion" id="accordion-13">
-                <div class="govuk-accordion__section ">
-                  <div class="govuk-accordion__section-header">
-                    <h2 class="govuk-accordion__section-heading">
-                      <span class="govuk-accordion__section-button" id="accordion-default-heading-13">
-                        What are the accessibility features at this site?
-                      </span>
-                    </h2>
-                  </div>
-                  <div id="accordion-default-content-13" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-13" style="padding-bottom: 0;">
-                    <table class="govuk-table" style="border-color: #b1b4b6">
-                      <tbody class="govuk-table__body">
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Step free and wheelchair accessible</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Large bays for wheelchairs and families</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Public toilets</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Accessible toilets</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Assisted testing - Drive through only<br>This is when staff can do the swab for you</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Guided testing<br>This is where staff guide you</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Easy read instructions</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Large print instructions</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">British Sign Language</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Language Translation</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag govuk-tag--grey">NOT AVAILABLE</span></td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                          <td class="govuk-table__cell">Braille</td>
-                          <td style="text-align: right;" class="govuk-table__cell"><span class="govuk-tag">AVAILABLE</span></td>
                         </tr>
                       </tbody>
                     </table>
