--- a/app/views/index.html
+++ b/app/views/index.html
@@ -502,6 +502,29 @@
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
               <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
+                Custom journeys (accessibility in the PCR journey)
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
+            <div style="display: flex;">
+                <div class="govuk-grid-column-one-third">
+                  <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In testing</strong>
+                  <h3 class="govuk-heading-s">V1</h3>
+                  <!-- <p class="govuk-body">Updated on 4 June 2021</p> -->
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                      <a href="/accessiibility/v1/govuk/get-coronavirus-test">Start page</a>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="govuk-accordion__section ">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
                 Bulk order home test kits
               </span>
             </h2>
@@ -1182,7 +1205,7 @@
                   <li><a href="/share-result-lateral-flow/v12/deep-link-error">Deep link error</a><nbsp> <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In live</strong></li>
                 </ul>
 
-                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">W release (15/04/21) - AI end-state MVP</h3>
+                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">W release (15/04/21) - AI MVP</h3>
                 <ul class="govuk-list govuk-list--bullet">
                   <li><a href="/share-result-lateral-flow/v16/index">W release (v16)</a><nbsp> <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In live</strong></li>
 
@@ -1209,7 +1232,7 @@
                         </details>-->
                   </ul>
 
-                  <h3 class="govuk-heading-s govuk-!-margin-bottom-1">A release (12/05/21) - Dynamic content</h3>
+                  <h3 class="govuk-heading-s govuk-!-margin-bottom-1">A release (12/05/21) - Dynamic content - AI and Self Report</h3>
                   <ul class="govuk-list govuk-list--bullet">
                     <li><a href="/share-result-lateral-flow/v18-1/index">Version 18.1: Reporting for someone else (1st/3rd person switcher)</a><nbsp> <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In live</strong></li>
                 </ul>
@@ -1360,6 +1383,11 @@
                             <li><a href="/share-result-lateral-flow/v26/index">End to end prototype for UR</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
                             <li><a href="/share-result-lateral-flow/sandbox/comms/strategic2/contact-choice">Strategic - choose method</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
                           <ul>
+                            <h4 class="gov-heading-s govuk-!-margin-bottom-1">Iteration 3 - language preferences</h4>
+                              <ul class="govuk-list govuk-list--bullet">
+                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/contact-choice">Strategic - choose method</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/language-choice">Strategic - choose language</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                              <ul>
                       </div>
                     </details>
                     <br><br>
