--- a/app/views/antigen/v2/refer-and-triage/do-you-have-symptoms.html
+++ b/app/views/antigen/v2/refer-and-triage/do-you-have-symptoms.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Does the person who needs a test have coronavirus symptoms?" %}
+{% set pageTitle = "Does the person who needs a test have any of these 3 symptoms?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -24,50 +24,74 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <form action="/antigen/{{version}}/action3/do-you-have-symptoms" method="post">
+        <form action="/antigen/{{version}}/action6/do-you-have-symptoms" method="post">
 
             <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset" aria-describedby="symptoms-hint symptoms-2-hint">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                            {{ pageTitle }}
-                        </h1>
-                    </legend>
-                    <span id="symptoms-hint" class="govuk-body">
-                        The main symptoms of coronavirus are:
-                    </span>
-                    <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-5">
-                        <li>a high temperature</li>
-                        <li>new, continuous cough</li>
-                        <li>loss or change to your sense of smell or taste</li>
-                    </ul>
-                    <span id="symptoms-2-hint" class="govuk-body">
-                        Most people with coronavirus have at least one of these symptoms.
-                    </span>
-                    <div class="govuk-radios govuk-!-margin-top-5" data-module="govuk-radios">
-
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="do-you-have-symptoms-1" name="do-you-have-symptoms" type="radio" value="Yes" {{ checked("do-you-have-symptoms", "Yes") }}>
-                            <label class="govuk-label govuk-radios__label" for="do-you-have-symptoms-1">
-                                Yes, at least one of these symptoms
-                            </label>
-                        </div>
-
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="do-you-have-symptoms-2" name="do-you-have-symptoms" type="radio" value="No" {{ checked("do-you-have-symptoms", "No") }}>
-                            <label class="govuk-label govuk-radios__label" for="do-you-have-symptoms-2">
-                                No, none of these symptoms
-                            </label>
-                        </div>
+              <fieldset class="govuk-fieldset" aria-describedby="symptoms-hint symptoms-2-hint">
+                  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                      <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
+                          {{ pageTitle }}
+                      </h1>
+                  </legend>
+                  <span id="symptoms-hint-2" class="govuk-body">
+                    You can still get a test if you feel unwell with other symptoms. Select all that apply.
+                  </span>
+                  <div class="govuk-checkboxes govuk-!-margin-top-6" data-module="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="do-you-have-symptoms" name="do-you-have-symptoms" type="checkbox" value="high temperature" {{ checked("do-you-have-symptoms", "high temperature") }}>
+                      <label class="govuk-label govuk-checkboxes__label" for="do-you-have-symptoms">
+                        high temperature
+                      </label>
                     </div>
-                </fieldset>
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="do-you-have-symptoms-2" name="do-you-have-symptoms" type="checkbox" value="new, continuous cough" {{ checked("do-you-have-symptoms", "new, continuous cough") }}>
+                      <label class="govuk-label govuk-checkboxes__label" for="do-you-have-symptoms-2">
+                        new, continuous cough
+                      </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="do-you-have-symptoms-3" name="do-you-have-symptoms" type="checkbox" value="loss or change to your sense of smell or taste" {{ checked("do-you-have-symptoms", "loss or change to your sense of smell or taste") }}>
+                      <label class="govuk-label govuk-checkboxes__label" for="do-you-have-symptoms-3">
+                        loss or change to your sense of smell or taste
+                      </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="do-you-have-symptoms-3" name="do-you-have-symptoms" type="checkbox" value="any other symptoms" {{ checked("do-you-have-symptoms", "any other symptoms") }}>
+                      <label class="govuk-label govuk-checkboxes__label" for="do-you-have-symptoms-3">
+                        any other symptoms
+                      </label>
+                    </div>
+                    <div class="govuk-checkboxes__divider govuk-body" style="margin-left: 5px; transform: translateY(5px)">OR</div>
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="do-you-have-symptoms-3" name="do-you-have-symptoms" type="checkbox" value="no symptoms" {{ checked("do-you-have-symptoms", "no symptoms") }}>
+                      <label class="govuk-label govuk-checkboxes__label" for="do-you-have-symptoms-3">
+                        no symptoms
+                      </label>
+                    </div>
+                  </div>
+
+
+              </fieldset>
+            </div>
+
+            <div class="govuk-warning-text">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text govuk-!-font-size-19">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                If they have any of these symptoms, they should self-isolate straight away until they get their results. They should not leave home, except to post a test kit or for a PCR test appointment. <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" class="govuk-link">Check if people they live with need to self-isolate on NHS.UK.</a>
+              </strong>
             </div>
 
             <button class="govuk-button" data-module="govuk-button">Continue</button>
+
 
         </form>
 
     </div>
 </div>
-
+<div class="proto-action big">
+  <a href="/antigen/{{version}}/refer-and-triage/do-you-have-symptoms-option-2">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+  </a>
+</div>
 {% endblock %}
