--- a/app/views/antigen/v2/refer-and-triage/government-pilot.html
+++ b/app/views/antigen/v2/refer-and-triage/government-pilot.html
@@ -15,13 +15,17 @@
   </p>
 </div>
 
-{% if data['do-you-have-symptoms'] == "Yes" %}
+<!-- {% if data['do-you-have-symptoms'] == "Yes" %}
 <a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/when-did-symptoms-start">Back</a>
 {% elseif data['follow-up-test'] == "Yes" %}
 <a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/follow-up-test-reason">Back</a>
 {% else %}
 <a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/follow-up-test">Back</a>
-{% endif %}
+{% endif %} -->
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:window.history.go(-1);"
+}) }}
 
 {% endblock %}
 
@@ -57,12 +61,12 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="professional-pilot-2" name="professional-pilot" type="radio" value="The person is attending an event that is part of the Events Research Programme" {{ checked("professional-pilot", "The person is attending an event that is part of the Events Research Programme") }}>
+                <input class="govuk-radios__input" id="professional-pilot-2" name="professional-pilot" type="radio" value="Attended an event as part of the Events Research Programme in the last 21 days" {{ checked("professional-pilot", "Attended an event as part of the Events Research Programme in the last 21 days") }}>
                 <label class="govuk-label govuk-radios__label" for="professional-pilot-2">
-                  The person is attending an event that is part of the Events Research Programme
+                  Attended an event as part of the Events Research Programme in the last 21 days
                 </label>
               </div>
-              <p class="govuk-body">Or</p>
+              <p class="govuk-body">or</p>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="professional-pilot-4" name="professional-pilot" type="radio" value="None of the above" {{ checked("professional-pilot", "None of the above") }}>
                 <label class="govuk-label govuk-radios__label" for="professional-pilot-4">
