--- a/app/views/antigen/v2/refer-and-triage/when-did-symptoms-start-error.html
+++ b/app/views/antigen/v2/refer-and-triage/when-did-symptoms-start-error.html
@@ -40,7 +40,7 @@
       <form action="/antigen/{{version}}/action3/when-did-symptoms-start" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" role="group" aria-describedby="symptoms-start-date-1-hint">
+          <fieldset class="govuk-fieldset govuk-!-margin-bottom-6" role="group" aria-describedby="symptoms-start-date-1-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
                 {{ pageTitle }}
@@ -48,63 +48,75 @@
             </legend>
             <p class="govuk-body">
               <span id="symptoms-start-date-1-hint">
-                If you cannot remember the exact date, select the date you think it was roughly.
+                If they cannot remember the exact date, select the date they think it was roughly.
               </span>
             </p>
 
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  When to stay at home
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                If they have a <strong>high temperature, a new continuous cough,</strong> or <strong>loss or change to their sense of smell or taste,</strong> they and anyone they live with should <strong>stay at home</strong> until they get their result. They can leave home to get or post a test.<br><br>
+                If they do not have these symptoms they <strong>may not</strong> need to stay at home. Find out more: <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" class="govuk-link" target="blank">when to self-isolate and what to do (opens in a new tab)</a>.
+              </div>
+            </details>
+
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="23 June 2021" {{ checked("date-of-onset", "23 June 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="25 August 2021" {{ checked("date-of-onset", "25 August 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-1">
-                  Wednesday, 23 June 2021
+                  Wednesday, 25 August 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="22 June 2021" {{ checked("date-of-onset", "22 June 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="24 August 2021" {{ checked("date-of-onset", "24 August 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-2">
-                  Tuesday, 22 June 2021
+                  Tuesday, 24 August 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="21 June 2021" {{ checked("date-of-onset", "21 June 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="23 August 2021" {{ checked("date-of-onset", "23 August 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-3">
-                  Monday, 21 June 2021
+                  Monday, 23 August 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="20 June 2021" {{ checked("date-of-onset", "20 June 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="22 August 2021" {{ checked("date-of-onset", "22 August 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-4">
-                Sunday, 20 June 2021
+                Sunday, 22 August 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="19 June 2021" {{ checked("date-of-onset", "19 June 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="21 August 2021" {{ checked("date-of-onset", "21 August 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-5">
-                Saturday, 19 June 2021
+                Saturday, 21 August 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="18 June 2021" {{ checked("date-of-onset", "18 June 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="20 August 2021" {{ checked("date-of-onset", "20 August 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-6">
-                Friday, 18 June 2021
+                Friday, 20 August 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="17 June 2021" {{ checked("date-of-onset", "17 June 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="19 August 2021" {{ checked("date-of-onset", "19 August 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-7">
-                Thursday, 17 June 2021
+                Thursday, 19 August 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="16 June 2021" {{ checked("date-of-onset", "16 June 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="18 August 2021" {{ checked("date-of-onset", "18 August 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-8">
-                Wednesday, 16 June 2021
+                Wednesday, 18 August 2021
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="date-of-onset-9" name="date-of-onset" type="radio" value="different" data-aria-controls="conditional-date-of-onset" {{ checked("date-of-onset", "different") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-9">
-                Before 16 June 2021
+                Before 18 August 2021
               </label>
             </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" style="border-left: 5px solid #d4351c" id="conditional-date-of-onset">
@@ -142,7 +154,7 @@
               </div>
             </div>
 
-            <details class="govuk-details govuk-!-margin-top-7" data-module="govuk-details">
+            <!-- <details class="govuk-details govuk-!-margin-top-7" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
                   Important information if you live in Scotland or Wales
@@ -155,7 +167,7 @@
                 On day 5, you need to go to a test site - it’s too late to order a home test kit.<br><br>
                 If you’re now on day 6 or more, do not get a test – it’s too late. <a class="govuk-link" href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/" target="blank">Follow this advice on self-isolation</a>.
               </div>
-            </details>
+            </details> -->
 
           </fieldset>
 
@@ -163,17 +175,24 @@
 
         </div>
 
-        <div class="govuk-warning-text govuk-!-margin-top-6">
+        <!-- <div class="govuk-warning-text govuk-!-margin-top-6">
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text govuk-!-font-size-19">
             <span class="govuk-warning-text__assistive">Warning</span>
-            If you have symptoms, you and everyone you live with should self-isolate immediately and not leave home until you get your test results. You can leave home to get or post a test.
+            If they have a high temperature, a new continuous cough, or loss or change to their sense of smell or taste, they and anyone they live with should stay at home until they get their result. They can leave home to get or post a test.
           </strong>
-        </div>
+        </div> -->
        
       </form>
 
     </div>
+
+    <div class="proto-action big">
+      <a href="/antigen/{{version}}/refer-and-triage/when-did-symptoms-start-error-option-2">
+        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+      </a>
+    </div>
+
   </div>
 
 {% endblock %}
