--- a/app/views/antigen/v2/refer-and-triage/when-did-symptoms-start-option-2.html
+++ b/app/views/antigen/v2/refer-and-triage/when-did-symptoms-start-option-2.html
@@ -15,12 +15,7 @@
   </p>
 </div>
 
-  <!-- <a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/do-you-have-symptoms">Back</a> -->
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
-  
+  <a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/do-you-have-symptoms">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -29,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/antigen/{{version}}/action3/when-did-symptoms-start" method="post">
+      <form action="/antigen/{{version}}/action3/when-did-symptoms-start-option-2" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset govuk-!-margin-bottom-6" role="group" aria-describedby="symptoms-start-date-1-hint">
@@ -46,57 +41,57 @@
 
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="25 August 2021" {{ checked("date-of-onset", "25 August 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="4 August 2021" {{ checked("date-of-onset", "4 August 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-1">
-                  Wednesday, 25 August 2021
+                  Wednesday, 4 August 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="24 August 2021" {{ checked("date-of-onset", "24 August 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="3 August 2021" {{ checked("date-of-onset", "3 August 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-2">
-                  Tuesday, 24 August 2021
+                  Tuesday, 3 August 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="23 August 2021" {{ checked("date-of-onset", "23 August 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="2 August 2021" {{ checked("date-of-onset", "2 August 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-3">
-                  Monday, 23 August 2021
+                  Monday, 2 August 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="22 August 2021" {{ checked("date-of-onset", "22 August 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="1 August 2021" {{ checked("date-of-onset", "1 August 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-4">
-                Sunday, 22 August 2021
+                Sunday, 1 August 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="21 August 2021" {{ checked("date-of-onset", "21 August 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="31 July 2021" {{ checked("date-of-onset", "31 July 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-5">
-                Saturday, 21 August 2021
+                Saturday, 31 July 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="20 August 2021" {{ checked("date-of-onset", "20 August 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="30 July 2021" {{ checked("date-of-onset", "30 July 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-6">
-                Friday, 20 August 2021
+                Friday, 30 July 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="19 August 2021" {{ checked("date-of-onset", "19 August 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="29 July 2021" {{ checked("date-of-onset", "29 July 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-7">
-                Thursday, 19 August 2021
+                Thursday, 29 July 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="18 August 2021" {{ checked("date-of-onset", "18 August 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="28 July 2021" {{ checked("date-of-onset", "28 July 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-8">
-                Wednesday, 18 August 2021
+                Wednesday, 28 July 2021
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="date-of-onset-9" name="date-of-onset" type="radio" value="different" data-aria-controls="conditional-date-of-onset" {{ checked("date-of-onset", "different") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-9">
-                Before 18 August 2021
+                Before 28 July 2021
               </label>
             </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-date-of-onset">
@@ -130,16 +125,50 @@
               </div>
             </div>
 
+            <p class="govuk-body govuk-!-margin-top-6">
+              If they have a <strong>high temperature, a new continuous cough,</strong> or <strong>loss or change to their sense of smell or taste,</strong> they and anyone they live with should <strong>stay at home</strong> until they get their result. They can leave home to get or post a test.<br><br>
+              If they do not have these symptoms they <strong>may not</strong> need to stay at home. Find out more: <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" class="govuk-link" target="blank">when to self-isolate and what to do (opens in a new tab)</a>.
+            </p>
+
+            <!-- <details class="govuk-details govuk-!-margin-top-7" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Important information if you live in Scotland or Wales
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                You need to <strong>get the test done in the first 5 days of having symptoms.</strong><br><br>
+                For example, if it's Thursday today, and your symptoms started on Monday, you are on day 4.<br><br>
+                On days 1 to 4, you can get tested at a site or at home. If you’re ordering a home test kit on day 4, do it by 3pm.<br><br>
+                On day 5, you need to go to a test site - it’s too late to order a home test kit.<br><br>
+                If you’re now on day 6 or more, do not get a test – it’s too late. <a class="govuk-link" href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/" target="blank">Follow this advice on self-isolation</a>.
+              </div>
+            </details> -->
+
           </fieldset>
 
           <button class="govuk-button" data-module="govuk-button">Continue</button>
 
         </div>
+
+        <!-- <div class="govuk-warning-text govuk-!-margin-top-6">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text govuk-!-font-size-19">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            If they have a high temperature, a new continuous cough, or loss or change to their sense of smell or taste, they and anyone they live with should stay at home until they get their result. They can leave home to get or post a test.
+          </strong>
+        </div> -->
        
       </form>
 
     </div>
 
+    <div class="proto-action big">
+      <a href="/antigen/{{version}}/refer-and-triage/when-did-symptoms-start">
+        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
+      </a>
+    </div>
+    
   </div>
 
 {% endblock %}
