--- a/app/views/antigen/v2/refer-and-triage/do-you-have-symptoms-option-2.html
+++ b/app/views/antigen/v2/refer-and-triage/do-you-have-symptoms-option-2.html
@@ -161,7 +161,7 @@
                     <div class="govuk-checkboxes__item govuk-!-margin-bottom-4">
                       <input class="govuk-checkboxes__input" id="do-you-have-symptoms-option-2-3" name="do-you-have-symptoms-option-2" type="checkbox" value="none of the above" {{ checked("do-you-have-symptoms-option-2", "none of the above") }}>
                       <label class="govuk-label govuk-checkboxes__label" for="do-you-have-symptoms-option-2-3">
-                        none of the above
+                        no symptoms
                       </label>
                     </div>
                   </div>
