--- a/app/views/antigen/v2/home-testing/enter-barcode-manual-error-2.html
+++ b/app/views/antigen/v2/home-testing/enter-barcode-manual-error-2.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter your test kit barcode" %}
+{% set pageTitle = "Enter the test kit barcode reference" %}
 
 {% extends "includes/layout.html" %}
 
@@ -24,10 +24,23 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/antigen/{{version}}/home-testing/swab-test-date" method="post">
+      <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <h2 class="govuk-error-summary__title" id="error-summary-title">
+          There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+          <ul class="govuk-list govuk-error-summary__list">
+            <li>
+              <a href="#error-1">The test kit barcode did not scan. Try again or enter the test kit barcode reference instead.</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <form action="/antigen/{{version}}/action2/enter-barcode-manual" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="enter-barcode-number-hint">
+          <fieldset class="govuk-fieldset" aria-describedby="enter-barcode-number-hint enter-barcode-number-hint-2">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
                 {{ pageTitle }}
@@ -35,20 +48,26 @@
             </legend>
 
             <span id="enter-barcode-number-hint" class="govuk-body">
-              Enter the 11 character reference below the barcode.<br><br>
-              It should look like this:
+              The test kit barcode should look like this:
             </span>
 
             <div class="govuk-!-margin-top-5 govuk-!-margin-bottom-5">
               <img src="/public/images/barcode-number-2.png" alt="barcode number" />
             </div>
 
-            <div id="content-1">
-              <div class="govuk-form-group">
+            <span id="enter-barcode-number-hint-2" class="govuk-body">
+              Enter the 11 character reference below the barcode.
+            </span>
+
+            <div id="content-1" class="govuk-!-margin-top-5">
+              <div class="govuk-form-group govuk-form-group--error">
                 <label class="govuk-label" for="kit-barcode-reference-1">
                   Test kit barcode reference<br>
                   <span class="govuk-hint">For example, AA135562600</span>
                 </label>
+                <span id="kit-barcode-reference-error-1" class="govuk-error-message">
+                  <span class="govuk-visually-hidden">Error:</span> The test kit barcode did not scan. Try again or enter the test kit barcode reference instead.
+                </span>
                 <input class="govuk-input govuk-!-width-two-thirds" id="kit-barcode-reference-1" name="kit-barcode-reference-1" type="text" value={{ data['kit-barcode-reference-1'] }}>
               </div>
               <div class="govuk-form-group">
@@ -79,19 +98,14 @@
     </div>
   </div>
 
-  <div class="proto-action big">
-    <a href="/antigen/{{version}}/home-testing/enter-barcode-manual">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
-    </a>
-  </div>
-
   <script>
 
     setTimeout(function () {
       const content2inner = `
       <div class="govuk-form-group">
         <label class="govuk-label" for="kit-barcode-reference-1">
-          Test kit barcode reference
+          Test kit barcode reference<br>
+          <span class="govuk-hint">For example, AA135562600</span>
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="kit-barcode-reference-1" name="kit-barcode-reference-1" type="text" value={{ data['kit-barcode-reference-1'] or 'AA135562600' }}>
       </div>
