--- a/app/views/antigen/v2/home-testing/enter-barcode-manual-error-3.html
+++ b/app/views/antigen/v2/home-testing/enter-barcode-manual-error-3.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter the unique test kit barcode" %}
+{% set pageTitle = "Enter the test kit barcode reference" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,57 +15,66 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/home-testing/royal-mail-barcode">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/home-testing/enter-barcode-number">Back</a>
 {% endblock %}
 
 {% block content %}
-{% include "includes/gtm-noscript.html" %}
+  {% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/antigen/{{version}}/home-testing/swab-test-date" method="post">
+      <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <h2 class="govuk-error-summary__title" id="error-summary-title">
+          There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+          <ul class="govuk-list govuk-error-summary__list">
+            <li>
+              <a href="#error-1">Test kit barcode references must match</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <form action="/antigen/{{version}}/action2/enter-barcode-manual" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="enter-barcode-number-hint">
+          <fieldset class="govuk-fieldset" aria-describedby="enter-barcode-number-hint enter-barcode-number-hint-2">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
                 {{ pageTitle }}
               </h1>
             </legend>
+
             <span id="enter-barcode-number-hint" class="govuk-body">
-              If you have a home test, use the camera on your phone or computer to scan one of the identical barcodes on the plastic tube, plastic bag, and return box.<br><br>Or you can manually enter the 11 character reference below the barcode.<br><br>If you're using a home test kit, you'll find the identical barcodes inside the home test kit, either attached to the plastic vile, biohazard bag and return box or loose for you to stick on yourself (please read instructions).<br><br>These are different from your pre-paid Royal Mail return package barcode on your box.
+              The test kit barcode should look like this:
             </span>
 
-            <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  What does the barcode look like?
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                <img src="/public/images/barcode-number.png" alt="barcode number"/>
-              </div>
-            </details>
+            <div class="govuk-!-margin-top-5 govuk-!-margin-bottom-5">
+              <img src="/public/images/barcode-number-2.png" alt="barcode number" />
+            </div>
 
+            <span id="enter-barcode-number-hint-2" class="govuk-body">
+              Enter the 11 character reference below the barcode.
+            </span>
 
-            <a href="/antigen/{{version}}/home-testing/scan-barcode" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-              Scan my barcode
-            </a>
-
-            <div id="content-1">
+            <div id="content-1" class="govuk-!-margin-top-5">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="kit-barcode-reference-1">
-                  Test kit barcode reference or URN
+                  Test kit barcode reference<br>
+                  <span class="govuk-hint">For example, AA135562600</span>
                 </label>
                 <input class="govuk-input govuk-!-width-two-thirds" id="kit-barcode-reference-1" name="kit-barcode-reference-1" type="text" value={{ data['kit-barcode-reference-1'] }}>
               </div>
-
-              <div class="govuk-form-group">
+              <div class="govuk-form-group govuk-form-group--error">
                 <label class="govuk-label" for="kit-barcode-reference-2">
-                  Confirm test kit barcode reference or URN
+                  Confirm test kit barcode reference
                 </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="kit-barcode-reference-2" name="kit-barcode-reference-2" type="text" value={{ data['kit-barcode-reference-2'] }}>
+                <span id="kit-barcode-reference-error-2" class="govuk-error-message">
+                  <span class="govuk-visually-hidden">Error:</span> Test kit barcode references must match
+                </span>
+                <input class="govuk-input govuk-!-width-two-thirds govuk-input--error" id="kit-barcode-reference-2" name="kit-barcode-reference-2" type="text" value={{ data['kit-barcode-reference-2'] }}>
               </div>
             </div>
 
@@ -78,15 +87,15 @@
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
+        <p class="govuk-body">
+          <a href="/antigen/{{version}}/home-testing/scan-barcode" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
+            Use the barcode scanner instead
+          </a>
+        </p>
+
       </form>
 
     </div>
-  </div>
-
-  <div class="proto-action big">
-    <a href="/antigen/{{version}}/home-testing/enter-barcode-number-option-2">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
-    </a>
   </div>
 
   <script>
@@ -95,7 +104,8 @@
       const content2inner = `
       <div class="govuk-form-group">
         <label class="govuk-label" for="kit-barcode-reference-1">
-          Test kit barcode reference
+          Test kit barcode reference<br>
+          <span class="govuk-hint">For example, AA135562600</span>
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="kit-barcode-reference-1" name="kit-barcode-reference-1" type="text" value={{ data['kit-barcode-reference-1'] or 'AA135562600' }}>
       </div>
