add chevron icons to the cards

--- a/app/assets/sass/nhsuk-site.scss
+++ b/app/assets/sass/nhsuk-site.scss
@@ -9033,3 +9033,13 @@ section+section>h2 {
       border: 8px solid #212b32!important
   }
 }
+
+.nhsuk-card__content.chevron {
+  padding-right: 20%;
+}
+
+.beta-icon__chevron-right-circle {
+  position: absolute; 
+  top: 45%; 
+  right: 16px;
+}
